# 242_charikov

./: HW1_Charikov_Nikita.txt  hw_reverse_array.c  hw_reverse_list.c  hw_swap.c  hw_transpose_matrix.c
HW2/: CMakeLists.txt  middle_line  middle_line.c  print_lines  print_lines.c
HW3/: CMakeLists.txt  bill.c  fred.c  john.c  lib.h  main.c  preload.c  sam.c  wrap.c
HW4/: CMakeLists.txt  fred.c  john.c  lib.h  preload_shared.c  program.c  regex_replace  regex_replace.c  sam.c  wrap_static.c
HW5/: CMakeLists.txt  executer  executer.c
HW6/: c8  sumsum.sh
HW7/: CMakeLists.txt  homework  main.c
